examples/test/testpolicy12616.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12616
  namespace: namespace15
spec:
  podSelector:
    matchLabels:
      key2: value3
      key30: value21
      key32: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value14
          key1: value37
          key17: value43
      podSelector:
        matchLabels:
          key40: value35
          key14: value33
